[metadata]
name = fixedincome-shreyass
version = file: VERSION.txt
author = Shreyas V. Srinivasan
author_email = shreyass@alum.mit.edu
description = Fixed Income Securities and Derivatives analytics package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/shreysrins/FixedIncome
project_urls =
    Bug Tracker = https://github.com/shreysrins/FixedIncome/issues
classifiers =
    Programming Language :: Python :: 3.7
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    numpy
    scipy
include_package_data = True

[options.packages.find]
where = src
